Add Wireshark test